--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         height="500" loading="lazy">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">Kết bạn 4 phương</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3">TinDog, Kết bạn 4 phương</h1>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-light btn-lg px-4 me-md-2" fdprocessedid="33etaa">
                             <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
